Animation channels can't be grouped in action editor #36687

Closed
opened 2013-09-09 07:37:56 +02:00 by Hadrien Brissaud · 5 comments

%%%--- Operating System, Graphics card ---
W7, gtx660m

- Blender version with error, and version that worked ---

2.68a - ?

- Short description of error ---

Dopesheet view allows grouping channels with a custom name, Action Editor view does not (presents you with a popup and a text field but does nothing)

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. select whatever channels in the dopesheet
  2. hit ctrl+G or "channel > group"

%%%

%%%--- Operating System, Graphics card --- W7, gtx660m - Blender version with error, and version that worked --- 2.68a - ? - Short description of error --- Dopesheet view allows grouping channels with a custom name, Action Editor view does not (presents you with a popup and a text field but does nothing) - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. select whatever channels in the dopesheet 2. hit ctrl+G or "channel > group" %%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%The ANIM_animdata_filter function used for grouping channel operator returns an empty list in case the editor is in "Action" mode. This is because the channel shown in this case are of type FCURVE instead of ANIMDATA.

@Joshua: I have attached a potential fix for this, which includes the FCURVE channels in the same case as ANIMDATA channels. It fixes this particular issue, but i have no clue if this could cause problems elsewhere, so please have a look.%%%

%%%The ANIM_animdata_filter function used for grouping channel operator returns an empty list in case the editor is in "Action" mode. This is because the channel shown in this case are of type FCURVE instead of ANIMDATA. @Joshua: I have attached a potential fix for this, which includes the FCURVE channels in the same case as ANIMDATA channels. It fixes this particular issue, but i have no clue if this could cause problems elsewhere, so please have a look.%%%
Member

%%%I took a detailed look at this problem the other day.

The patch proposed here would probably fix the issue in this case, but it doesn't solve the real issues here (i.e. that filtering for animdata blocks in Action Editor and probably the ShapeKey editor too would spit out F-Curves!). Now I know why this fix smelled a bit fishy when I first saw it!

I'll look into a proper fix soon.%%%

%%%I took a detailed look at this problem the other day. The patch proposed here would probably fix the issue in this case, but it doesn't solve the real issues here (i.e. that filtering for animdata blocks in Action Editor and probably the ShapeKey editor too would spit out F-Curves!). Now I know why this fix smelled a bit fishy when I first saw it! I'll look into a proper fix soon.%%%
Member

%%%Fixed in svn.%%%

%%%Fixed in svn.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36687
No description provided.